# crewai-research-agent-demo

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  nixpacks.toml  pyproject.toml  railway.json  requirements.txt  start.py  streamlit_app.py
.streamlit/: config.toml  secrets.toml.example
src/research_crew/: __init__.py  __main__.py  cli.py  crew.py  logging_conf.py  runner.py  settings.py
src/research_crew/config/: agents.yaml  tasks.yaml
src/research_crew/integrations/: __init__.py  supabase_client.py
src/research_crew/tools/: __init__.py  web_search.py
supabase/migrations/: 0001_init.sql
tests/: conftest.py  test_settings.py  test_supabase_client.py  test_web_search.py
